--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.11.10",
     "apexcharts": "^3.37.0",
+    "axios": "^1.3.4",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
+    "env-cmd": "^10.1.0",
     "history": "^5.3.0",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
@@ -58,8 +60,10 @@
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.1",
     "react-router-dom": "^6.8.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "^5.0.1",
     "simplebar-react": "^3.2.1",
+    "sweetalert2": "^11.7.3",
     "web-vitals": "^3.1.1"
   },
   "devDependencies": {
@@ -79,5 +83,6 @@
   },
   "overrides": {
     "nth-check": "2.1.1"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
