--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "apexcharts": "^3.37.0",
     "axios": "^1.3.4",
     "change-case": "^4.1.2",
+    "connected-react-router": "^6.9.3",
     "date-fns": "^2.29.3",
     "env-cmd": "^10.1.0",
     "history": "^5.3.0",
+    "jquery": "^3.6.4",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
@@ -59,9 +61,13 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.43.1",
+    "react-redux": "^8.0.5",
+    "react-router": "^6.10.0",
     "react-router-dom": "^6.8.1",
     "react-router-redux": "^4.0.8",
     "react-scripts": "^5.0.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "simplebar-react": "^3.2.1",
     "sweetalert2": "^11.7.3",
     "web-vitals": "^3.1.1"
@@ -83,6 +89,5 @@
   },
   "overrides": {
     "nth-check": "2.1.1"
-  },
-  "proxy": "http://localhost:8080"
+  }
 }
